write the heading

--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h1>Website title</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis
+      possimus explicabo sapiente nam necessitatibus consequuntur? Nemo ad enim
+      quibusdam, modi at cumque, explicabo voluptatum deserunt, nihil sequi
+      ullam dolorum? Nemo.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore odio
+      facilis repudiandae vitae? Esse deleniti illo alias eveniet quas! Dolorem,
+      repellat! Unde, dicta! Iste perferendis tempore obcaecati, ipsam corrupti
+      voluptate!
+    </p>
+  </body>
 </html>
